syntax = "proto3";

package github.v1;

message Repo {
  string name = 1;
  string full_name = 2;
  string url = 3;
  string owner = 4;
  string default_branch = 5;
  bool private = 6;
}

message GetReposRequest {
  string github_install_id = 1;
}

message GetReposResponse {
  repeated Repo repos = 1;
}
